--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -105,7 +105,7 @@ SET(EXECUTABLE_OUTPUT_PATH ${TOP_LEVEL}/build/bin)
 SET(LIBRARY_OUTPUT_PATH ${TOP_LEVEL}/build/lib)
 
 # library directory locations
-SET(BENTO_DIR ${LIBRARY_DIR}/Bento)
+SET(BENTO_DIR ${LIBRARY_DIR})
 SET(BENTO_INCLUDE_DIR ${BENTO_DIR}/include)
 SET(BENTO_SOURCE_DIR ${BENTO_DIR}/src)
 
@@ -129,5 +129,5 @@ FILE(GLOB BENTOTESTING_HEADER_FILES ${BENTOTESTING_DIR}/src/window.h)
 FILE(GLOB BENTOTESTING_FORMS ${BENTOTESTING_DIR}/*.ui)
 QT4_WRAP_CPP(BENTOTESTING_HEADER_MOCS ${BENTOTESTING_HEADER_FILES})
 MY_QT4_WRAP_UI(BENTOTESTING_FORM_HEADERS ${BENTOTESTING_DIR}/src ${BENTOTESTING_FORMS})
-ADD_EXECUTABLE(BentoTesting ${BENTOTESTING_SOURCE_FILES} ${BENTOTESTING_HEADER_FILES} ${BENTOTESTING_HEADER_MOCS} ${BENTOTESTING_FORM_HEADERS})
-TARGET_LINK_LIBRARIES(BentoTesting Bento ${QT_LIBRARIES})
+ADD_EXECUTABLE(BentoTest ${BENTOTESTING_SOURCE_FILES} ${BENTOTESTING_HEADER_FILES} ${BENTOTESTING_HEADER_MOCS} ${BENTOTESTING_FORM_HEADERS})
+TARGET_LINK_LIBRARIES(BentoTest Bento ${QT_LIBRARIES})
